=============
Release 0.8.1
=============

* add a docker file to build the software
* add support for shanks in phy 2.0

=============
Release 0.8.0
=============

* major improvement in the clustering. No more max_clusters parameters
* much faster clustering (thanks to Ruben Herzog)
* added the statsmodels library as a required dependency
* enhancement of the smart search mode
* enhancement of the bicubic spline interpolation
* fix a typo when using dead times and the collect mode
* fix a minor bug when small amount of spikes are found during smart search
* fix a bug in the wrapper for BRW files
* support for phy 2.0 and phylib
* remove the strongly time shifted templates
* additing of a wrapper for MDA file format
* amplitudes for unfitted spikes is now 1 when exporting to phy
* default install is now qt5, to work with phy 2.0

=============
Release 0.7.6
=============

* cosmetic changes in the GUI
* adding a deconverting method to switch back from phy to MATLAB
* support for the lags between templates in the MATLAB GUI
* warn user if data are corrupted because of interrupted filtering
* robust automatic selection of the centroids (thanks to Ruben Herzog)
* addition of the statsmodels dependency
* remove the max_cluster parameter
* reduction of the size for saved clusters
* display the file name in the header
* fix a nasty bug allowing spikes at the border of chunks to be fitted even during dead periods

=============
Release 0.7.5
=============

* fix a bug for MPICH when large dictionaries.
* fix a bug for numpy files when used with new numpy versions
* add the possibility to subtract one channel as a reference channel from others
* native support for blackrock files (only .ns5 tested so far)
* simplifications in the parameter file
* fix for display of progress bars with tqdm
* addition of a multi-folders mode for openephys
* hide GPU support for now, as this is not actively maintained and optimized
* fix in the MATLAB GUI for float32 data